# histogram

./: CMakeLists.txt  FileReader.h  Main.qml  README.md  main.cpp  qml.qrc  words.txt
qml/: Histogram.qml  Main.qml
src/: FileReader.cpp  FileReader.h  HistogramModel.cpp  HistogramModel.h
